Fix overflow-x VenueList scroll issue

--- a/src/css/_MapPage.scss
+++ b/src/css/_MapPage.scss
@@ -371,6 +371,7 @@ body.body--VenueSlider #root,
   }
   .VenueList {
     overflow-y: auto;
+    overflow-x: hidden;
     -webkit-overflow-scrolling: touch;
     top: 56px;
     bottom: 0;
